formatted GACS classification scheme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,10 +11,7 @@ pages:
 - Scientific and Common Names: names.md
 - Relations between Concepts: relations.md
 - Semantic Types: semantic_types.md
-- Thematic Classification:
-    - 'Purpose': thematic_classification/purpose.md
-    - 'Overview': thematic_classification/overview.md
-    - 'Scope Notes': thematic_classification/scope_notes.md
+- GACS Thematic Classification: thematic_classification.md
 - Definitions: definitions.md
 - Documentation Properties: docproperties.md
 - Glossary: glossary.md
