--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,11 +5,12 @@ repo_name: 'Github'
 edit_uri: 'edit/master/docs/'
 site_description: 'Guidelines for GACS'
 pages:
-- About these Guidelines: index.md
+- About these guidelines: index.md
 - About GACS: gacs.md
-- Concept Relations: relations.md
-- Concept Definitions: definitions.md
-- Concept Labels: labels.md
-- Scientific and Common Names: names.md
-- GACS Thematic Classification: thematic_classification.md
-- Documentation Properties: docproperties.md
+- GACS concepts: concepts.md
+- Concept relations: relations.md
+- Concept definitions: definitions.md
+- Concept labels: labels.md
+- Scientific and common names: names.md
+- Thematic classification: thematic_classification.md
+- Documentation properties: docproperties.md
