change "Documentation properties" tab to "Scope notes"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,4 +13,4 @@ pages:
 - Concept labels: labels.md
 - Scientific and common names: names.md
 - Thematic classification: thematic_classification.md
-- Documentation properties: docproperties.md
+- Scope notes: docproperties.md
